Fix Wrong size of placeholder when creating a new module

--- a/assets/css/components/Modules.scss
+++ b/assets/css/components/Modules.scss
@@ -488,7 +488,7 @@
 }
 
 .wf-module--placeholder {
-  width: 26rem;
+  width: 28rem;
   display: flex;
   align-items: center;
   margin-bottom: 0.5rem;
